评论增加一点；

--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/BlogPosts/Index.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/BlogPosts/Index.cshtml
@@ -177,4 +177,6 @@
     <script src="~/js/like.js"></script>
     <script src="~/js/prism.js"></script>
     <script src="~/js/bootstrap.min.js"></script>
+    <script src="~/js/handlebars-v4.7.7.js"></script>
+    <script src="~/js/comment.js"></script>
 }
