--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/BlogPosts/Index.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/BlogPosts/Index.cshtml
@@ -131,7 +131,9 @@
             </div>
         </div>
     </div>
-    @await Html.PartialAsync("Ads/_DiaplayPartial")
+    <environment names="Production">
+        @await Html.PartialAsync("Ads/_DiaplayPartial")
+    </environment>
     <div class="clear blank"></div>
     @if (Model.Current?.Nears is {Count:>0})
     {
@@ -156,17 +158,23 @@
 </div>
 <aside class="side-section right-box">
 
-    @await Html.PartialAsync("Ads/_DiaplayPartial")
+    <environment names="Production">
+        @await Html.PartialAsync("Ads/_DiaplayPartial")
+    </environment>
     <div class="clear blank"></div>
     @await Html.PartialAsync("Sides/_TuiJianAndTopPartial")
     <div class="clear blank"></div>
-    @await Html.PartialAsync("Ads/_DiaplayPartial")
+    <environment names="Production">
+        @await Html.PartialAsync("Ads/_DiaplayPartial")
+    </environment>
     <div class="clear blank"></div>
     @await Html.PartialAsync("Sides/_TagCloudsPartial")
     <div class="clear blank"></div>
     @await Html.PartialAsync("Sides/_RandomListPartial")
     <div class="clear blank"></div>
-    @await Html.PartialAsync("Ads/_DiaplayPartial")
+    <environment names="Production">
+        @await Html.PartialAsync("Ads/_DiaplayPartial")
+    </environment>
 
 </aside>
 
