--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Comments/_CommentsPartial.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Comments/_CommentsPartial.cshtml
@@ -43,7 +43,7 @@
     <li class="comment" data-id="{{id}}">
         <div class="avatar">
             <a href="javascript:void(0);">
-                <img src="~/images/avatar.jpg" width="55" height="55">
+                <img src="@SiteOptions.Value.Domain/images/avatar.jpg" width="55" height="55">
             </a>
         </div>
         <div class="comment-body">
