参考开源项目添加后台前端代码（逐渐修改）；
参考项目地址：https://github.com/linhaojun857/aurora

--- a/src/Dotnet9.Admin.Web/Dotnet9.AdminBlazor/Shared/MainLayout.razor
+++ b/src/Dotnet9.Admin.Web/Dotnet9.AdminBlazor/Shared/MainLayout.razor
@@ -8,7 +8,7 @@
     <MudAppBar Elevation="0">
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
         <MudSpacer />
-        <MudIconButton Icon="@Icons.Custom.Brands.MudBlazor" Color="Color.Inherit" Link="https://dotnet9.com/" Target="_blank" />
+        <MudIconButton Icon="@Icons.Filled.Web" Color="Color.Inherit" Link="https://dotnet9.com/" Target="_blank" />
         <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" Link="https://github.com/dotnet9/Dotnet9" Target="_blank" />
     </MudAppBar>
     <MudDrawer @bind-Open="_drawerOpen" Elevation="1">
