--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Index.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Index.cshtml
@@ -13,7 +13,7 @@
 @await Html.PartialAsync("Home/_TuiJianNewsPartial")
 <environment names="Production">
     <div class="clear blank"></div>
-    @await Html.PartialAsync("Ads/_DiaplayPartial")
+    @*@await Html.PartialAsync("Ads/_DiaplayPartial")*@
 </environment>
 <div class="clear blank"></div>
 @await Html.PartialAsync("Home/_PicturePartial")
@@ -21,7 +21,7 @@
 @await Html.PartialAsync("Home/_NewsPartial")
 <environment names="Production">
     <div class="clear blank"></div>
-    @await Html.PartialAsync("Ads/_DiaplayPartial")
+    @*@await Html.PartialAsync("Ads/_DiaplayPartial")*@
 </environment>
 <div class="clear blank"></div>
 @await Html.PartialAsync("Home/_VideosPartial")
@@ -29,7 +29,7 @@
 @await Html.PartialAsync("Home/_WenZiPartial")
 <environment names="Production">
     <div class="clear blank"></div>
-    @await Html.PartialAsync("Ads/_DiaplayPartial")
+    @*@await Html.PartialAsync("Ads/_DiaplayPartial")*@
 </environment>
 <div class="clear blank"></div>
 @await Html.PartialAsync("Home/_ToolsPartial")
