调试专辑；调试首页评论列表；高度侧边栏标签；

--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_PersonalPartial.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_PersonalPartial.cshtml
@@ -27,7 +27,7 @@
             </li>
             <li>
                 <i class="iconfont icon-zhihu-circle"></i>
-                <a href="@SiteOptions.Value.Zhihu" target="_blank"> 知乎</a>
+                <a href="@SiteOptions.Value.ZhiHu" target="_blank"> 知乎</a>
             </li>
         </ul>
     </div>
