--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_WeekTagSidebar.cshtml
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_WeekTagSidebar.cshtml
@@ -1,35 +1,22 @@
-﻿<div class="tags">
+﻿@using Dotnet9.Contracts.Tags
+@inject ICaller Caller
+@{
+    var tags = await Caller.GetAsync<List<TagBrief>>("/api/tag/hot");
+}
+<div class="tags">
     <div class="side_title">
         <a href="/">更多</a>
         <h3>热门标签</h3>
     </div>
-    <ul>
-        <li>
-            <a href="/">HarmonyOS</a>
-        </li>
-        <li>
-            <a href="/">UI</a>
-        </li>
-        <li>
-            <a href="/">软件开发</a>
-        </li>
-        <li>
-            <a href="/">Ability框架</a>
-        </li>
-        <li>
-            <a href="/">应用媒体</a>
-        </li>
-        <li>
-            <a href="/">网络与连接</a>
-        </li>
-        <li>
-            <a href="/">App开发</a>
-        </li>
-        <li>
-            <a href="/">Android开发</a>
-        </li>
-        <li>
-            <a href="/">数据管理</a>
-        </li>
-    </ul>
+    @if (tags?.Any() == true)
+    {
+        <ul>
+            @foreach (var tag in tags)
+            {
+                <li>
+                    <a href="/tag/@HtmlEncoder.Encode(tag.Name)">@tag.Name</a>
+                </li>
+            }
+        </ul>
+    }
 </div>
