--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/_ViewImports.cshtml
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/_ViewImports.cshtml
@@ -5,3 +5,4 @@
 @using Dotnet9.Contracts.Dto
 @using Dotnet9.Contracts.Dto.Albums
 @using Dotnet9.Contracts.Dto.Categories
+@using Dotnet9.Contracts.Dto.Blogs
