Add blog post search pagination;;

--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Blogs/Search.cshtml
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Blogs/Search.cshtml
@@ -1,6 +1,6 @@
 ﻿@page "/albums/{Slug}"
 
-@model Dotnet9.RazorPages.Pages.Albums.IndexModel
+@model Dotnet9.RazorPages.Pages.Blogs.SearchModel
 @{
     ViewData[ViewDataKeys.Title] = $"专辑-{Model.RequestResponse?.AlbumName}";
     ViewData[ViewDataKeys.Keywords] = Model.Slug;
