--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Index.cshtml
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Index.cshtml
@@ -1,20 +1,17 @@
 ﻿@page
-
-@inject ICaller Caller
+@model Dotnet9.RazorPages.Pages.IndexModel
 @{
-    var siteInfo = await Caller.GetAsync<SiteInfo>("/api/systems");
-    var recommendBlogs = await Caller.GetAsync<List<BlogBrief>>("/api/blogs/recommend");
     ViewData[ViewDataKeys.Title] = "首页";
-    ViewData[ViewDataKeys.Keywords] = siteInfo?.Keywords;
-    ViewData[ViewDataKeys.Description] = siteInfo?.Description;
+    ViewData[ViewDataKeys.Keywords] = Model.SiteInfo?.Keywords;
+    ViewData[ViewDataKeys.Description] = Model.SiteInfo?.Description;
 }
 
 <div class="banner">
     <div class="swiper-container">
         <div class="swiper-wrapper">
-            @if (recommendBlogs?.Any() == true)
+            @if (Model.Blogs?.Any() == true)
             {
-                foreach (var recommendBlog in recommendBlogs)
+                foreach (var recommendBlog in Model.Blogs)
                 {
                     <div class="swiper-slide">
                         <a href="/@recommendBlog.CreationTime.Year/@recommendBlog.CreationTime.Month/@recommendBlog.Slug" target="_blank">
@@ -44,30 +41,5 @@
     </script>
 </div>
 <!-- banner end-->
-<div class="blog_list">
-    @if (recommendBlogs?.Any() == true)
-    {
-        <ul>
-            @foreach (var blog in recommendBlogs)
-            {
-                <li>
-                    <a href="@blog.CreationTime.ToString("/yyyy/MM")/@blog.Slug" class="blog_more">
-                        <h2>@blog.Title</h2>
-                        <div class="ps">
-                            <span class="ps_tj">推荐</span><span class="ps_yc">原创</span>
-                        </div>
-                        <p>@blog.Description</p>
-                    </a>
-                    <div class="info">
-                        <span class="info_class">
-                            <a href="/">云计算</a>
-                        </span><span class="info_time">@blog.CreationTime.ToString("yyyy-MM-dd HH:mm")</span><span class="info_view">23</span>
-                    </div>
-                </li>
-            }
-        </ul>
-    }
-</div>
-<div class="read_more">
-    <a href="/">查看更多</a>
-</div>
+
+@await Html.PartialAsync("_PaginationPartial", new PaginationModel(Model.Blogs, Model.UrlSuffix, Model.Current, Model.Pages, Model.RequestResponse!.Total, Model.PageSize, Model.RequestResponse.TotalPage))
