--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_PaginationPartial.cshtml
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_PaginationPartial.cshtml
@@ -8,52 +8,82 @@
     var showLast = showFirst;
 }
 
-<div>
-    @if (Model.Total > Model.PageSize)
-    {
-        <ul class="pagination">
-            @if (showFirst)
+@if (Model.Blogs.Count <= 0)
+{
+    <div class="read_more">
+        这里空空如也
+    </div>
+}
+else
+{
+    <div class="blog_list">
+        <ul>
+            @foreach (var blog in Model.Blogs)
             {
-                <li class="pagination-btn">
-                    <a href="@(Model.UrlPrefix)?current=1&pageSize=@Model.PageSize">⇤</a>
+                <li>
+                    <a href="@blog.CreationTime.ToString("/yyyy/MM")/@blog.Slug" class="blog_more">
+                        <h2>@blog.Title</h2>
+                        <div class="ps">
+                            <span class="ps_tj">推荐</span><span class="ps_yc">原创</span>
+                        </div>
+                        <p>@blog.Description</p>
+                    </a>
+                    <div class="info">
+                        <span class="info_class">
+                            <a href="/">云计算</a>
+                        </span><span class="info_time">@blog.CreationTime.ToString("yyyy-MM-dd HH:mm")</span><span class="info_view">23</span>
+                    </div>
                 </li>
             }
-            @if (showPrev)
-            {
-                <li class="pagination-btn">
-                    <a href="@(Model.UrlPrefix)?current=@prevPageIndex&pageSize=@Model.PageSize">←</a>
-                </li>
-            }
-            @if (Model.Pages?.Any() == true)
-            {
-                @foreach (var pageIndex in Model.Pages)
+        </ul>
+    </div>
+    <div>
+        @if (Model.Total > Model.PageSize)
+        {
+            <ul class="pagination">
+                @if (showFirst)
                 {
-                    <li class="pagination-btn" active="@(pageIndex == Model.Current)"
-                        value="@pageIndex">
-                        <a href="@(Model.UrlPrefix)?current=@pageIndex&pageSize=@Model.PageSize">@pageIndex</a>
+                    <li class="pagination-btn">
+                        <a href="@(Model.UrlPrefix)?current=1&pageSize=@Model.PageSize">⇤</a>
                     </li>
                 }
-            }
+                @if (showPrev)
+                {
+                    <li class="pagination-btn">
+                        <a href="@(Model.UrlPrefix)?current=@prevPageIndex&pageSize=@Model.PageSize">←</a>
+                    </li>
+                }
+                @if (Model.Pages?.Any() == true)
+                {
+                    @foreach (var pageIndex in Model.Pages)
+                    {
+                        <li class="pagination-btn" active="@(pageIndex == Model.Current)"
+                            value="@pageIndex">
+                            <a href="@(Model.UrlPrefix)?current=@pageIndex&pageSize=@Model.PageSize">@pageIndex</a>
+                        </li>
+                    }
+                }
 
-            @if (showNext)
-            {
-                <li class="pagination-btn">
-                    <a href="@(Model.UrlPrefix)?current=@nextPageIndex&pageSize=@Model.PageSize">→</a>
-                </li>
-            }
+                @if (showNext)
+                {
+                    <li class="pagination-btn">
+                        <a href="@(Model.UrlPrefix)?current=@nextPageIndex&pageSize=@Model.PageSize">→</a>
+                    </li>
+                }
 
-            @if (showLast)
-            {
-                <li class="pagination-btn">
-                    <a href="@(Model.UrlPrefix)?current=@Model.PageCount&pageSize=@Model.PageSize">⇥</a>
-                </li>
-            }
-        </ul>
-    }
-    else
-    {
-        <ul class="pagination">
-            <li class="pagination-total">共 @Model.Total 条</li>
-        </ul>
-    }
-</div>
+                @if (showLast)
+                {
+                    <li class="pagination-btn">
+                        <a href="@(Model.UrlPrefix)?current=@Model.PageCount&pageSize=@Model.PageSize">⇥</a>
+                    </li>
+                }
+            </ul>
+        }
+        else
+        {
+            <ul class="pagination">
+                <li class="pagination-total">共 @Model.Total 条</li>
+            </ul>
+        }
+    </div>
+}
