--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_LeftNavigation.cshtml
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_LeftNavigation.cshtml
@@ -7,13 +7,13 @@
     <div class="topnav">
         <ul id="starlist">
             <li>
-                <a href="index.html">最新文章</a>
+                <a href="/">最新文章</a>
             </li>
             <li>
-                <a href="tuijian.html">推荐文章</a>
+                <a href="/tuijian">推荐文章</a>
             </li>
             <li>
-                <a href="hot.html">热门文章</a>
+                <a href="/hot">热门文章</a>
             </li>
             @if (albumBriefs?.Count > 0)
             {
