--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_Layout.cshtml
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
     <div class="box_r">
         @await Html.PartialAsync("_PopularWeekBlogSidebar")
         @await Html.PartialAsync("_WeekTagSidebar")
-        @await Html.PartialAsync("_WebmasterRecommendedSidebar")
+            @*@await Html.PartialAsync("_WebmasterRecommendedSidebar")*@
     </div>
 </article>
 @await Html.PartialAsync("_FooterPartial")
