--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_PopularWeekBlogSidebar.cshtml
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_PopularWeekBlogSidebar.cshtml
@@ -16,7 +16,7 @@
                 <li>
                     <a href="@blog.CreationTime.ToString("/yyyy/MM")/@blog.Slug">
                         <p>@blog.Title</p>
-                    </a><span>23</span>
+                    </a><span>@blog.ViewCount</span>
                 </li>
             }
         </ul>
