--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Blogs/Details.cshtml
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Blogs/Details.cshtml
@@ -17,20 +17,55 @@
 <h1 class="detail-title">@Model.Blog?.Title</h1>
 
 <div class="detail-action">
+    @if (Model.Blog?.Banner == true)
+    {
+        <span class="ps_tj">推荐</span>
+    }
+    @if (Model.Blog?.CopyrightType == "Default")
+    {
+        <span class="ps_yc">原创</span>
+    }
+
     <span>
         <i class="iconfont icon-yonghu"></i>
         &nbsp; @(Model.Blog?.Original ?? siteInfo?.Owner)
     </span>
+
+
+    @if (Model.Blog?.Albums != null && Model.Blog?.Albums.Any() == true)
+    {
+        <span>
+            <i class="iconfont icon-wenjianjia"></i>
+            @foreach (var album in Model.Blog!.Albums)
+            {
+                <a href="/albums/@album.Slug">@album.Name</a>
+            }
+        </span>
+    }
+
     @if (Model.Blog?.Categories != null && Model.Blog?.Categories.Any() == true)
     {
         <span>
             <i class="iconfont icon-wenjianjia"></i>
             @foreach (var cat in Model.Blog!.Categories)
             {
-                <a href="/cat/@cat.Slug">@cat.Name</a>
+                <a href="/categories/@cat.Slug">@cat.Name</a>
             }
         </span>
     }
+
+
+    @if (Model.Blog?.Tags != null && Model.Blog?.Tags.Any() == true)
+    {
+        <span>
+            <i class="iconfont icon-wenjianjia"></i>
+            @foreach (var tag in Model.Blog!.Tags)
+            {
+                <a href="/tags/@tag.Name">@tag.Name</a>
+            }
+        </span>
+    }
+
     <span>
         <i class="iconfont icon-riqi"></i>
         &nbsp;@Model.Blog?.CreationTime.ToString("yyyy-MM-dd")
@@ -65,7 +100,7 @@
                     <p>本文由本站(<a href="https://dotnet9.com">https://dotnet9.com</a>)整理或创作，如若转载请保留原文标题及原文链接</p>
                     break;
             }
-            <p>原文作者：<a style="color: #262626;" href="#">@(Model.Blog.Original ?? @siteInfo.Owner)</a></p>
+            <p>原文作者：<a style="color: #262626;" href="#">@(Model.Blog.Original ?? @siteInfo?.Owner)</a></p>
             @if (Model.Blog.CopyrightType == "Default")
             {
                 <p>原文标题：<a href="/@Model.Blog.CreationTime.ToString("yyyy/MM")/@Model.Blog.Slug">@Model.Blog.Title</a></p>
