--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Categories/Index.cshtml
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Categories/Index.cshtml
@@ -7,4 +7,8 @@
     ViewData[ViewDataKeys.Description] = Model.RequestResponse?.CategoryName;
 }
 
+<h1 class="detail-title">分类-@Model.RequestResponse?.CategoryName</h1>
+
+<div id="view-content" class="gap-solid"></div>
+
 @await Html.PartialAsync("_PaginationPartial", new PaginationModel(Model.Blogs, $"/categories/{Model.Slug}", Model.Current, Model.Pages, Model.RequestResponse!.Total, Model.PageSize, Model.RequestResponse.TotalPage))
