--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_FooterPartial.cshtml
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_FooterPartial.cshtml
@@ -16,14 +16,14 @@
         <li>
             <a href="about.html" title="关于博主">
                 <i class="icon_ab">
-                    <img src="images/ft_about.png" alt="">
+                    <img src="~/images/ft_about.png" alt="">
                 </i>
             </a>
         </li>
         <li>
             <a href="gbook.html" title="在线留言">
                 <i class="icon_qq">
-                    <img src="images/ft_qq.png" alt="">
+                    <img src="~/images/ft_qq.png" alt="">
                 </i>
             </a>
         </li>
@@ -33,14 +33,14 @@
                     <img src="images/ft_ewm.png" alt="">
                 </i>
                 <span>
-                    <img src="images/wx.png" alt="微信">
+                    <img src="~/images/wx.png" alt="微信">
                 </span>
             </a>
         </li>
         <li>
             <a href="#" class="icon-top" title="返回顶部">
                 <i class="icon_fh">
-                    <img src="images/ft_top.png" alt="">
+                    <img src="~/images/ft_top.png" alt="">
                 </i>
             </a>
         </li>
